--- a/index.html
+++ b/index.html
@@ -1,32 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css" type="text/css">
-   
-</head>
-<style>
-        .gambar{
-            height: 100%;
-            width:100%;
-/* Center and scale the image nicely */
-background-position: center;
-background-repeat: no-repeat;
-background-size: cover;
-        }
-</style>
-<body>
-       
-    <br><br>
-    <table id="table_view">
-        <img src="ALDINN.png" class="gambar">
-</body>
+    <link rel="stylesheet" href="css/style.css" type="text/css" />
+  </head>
+  <style>
+    body {
+      background-image: url("ALDINN.png");
+      width: 100%;
+      height: 670px;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+  </style>
+  <body></body>
 </html>
-
-   
-
-
-
